# ferm_ge

./: .editorconfig  .gitignore  Makefile  README  README.md  all.ipynb  environment.yml  example.ipynb  experiments.py  ferm.py  main.py  mini.ipynb  plot.ipynb  plotting.py  pyproject.toml  tasks.py
data/: adult.py  compas.py  crime.py  dataset.py  dutch_census.py  law_school.py  preset.py
ferm_ge/: __init__.py  alg_ge.py  alg_gefair.py  alg_gefair_impl.cpp  alg_seo.py  algorithm_ge.py  algorithm_gefair.py  algorithm_gefair_impl.cpp  algorithm_gefair_impl.py  algorithms.py  exp.py  exp_param.py  exp_utils.py  experiment.py  metrics.py  plotting.py  task_blc.py  tasks.py  utils.py
