[tool.poetry]
name = "ferm_ge"
version = "0.1.0"
description = "A Fair Empirical Risk Minimization with Generalized Entropy"
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.18,<1.24"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
requests = "^2.28.1"
numba = "^0.56.4"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
ipython = "8.7.0"
ipywidgets = "7.7.1"
types-requests = "^2.28.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.mypy]
warn_return_any = true
